--- a/source/style.css
+++ b/source/style.css
@@ -23,10 +23,10 @@ hr {
 .city-clock {
   border: 10px solid green;
   border-radius: 40px;
-  padding: 10px 20px;
+  padding: 10px 16px;
   margin: 5px 30px;
   text-align: center;
-  font-size: 40px;
+  font-size: 36px;
   font-weight: 700;
   background-color: black;
   color: green;
@@ -51,3 +51,16 @@ hr {
   display: block;
   margin: 0 auto;
 }*/
+@media (max-width: 1100px) {
+  .city-clock {
+    border: 7px solid green;
+    border-radius: 40px;
+    padding: 10px 20px;
+    margin: 5px 10px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    background-color: black;
+    color: green;
+  }
+}
